<resources>
    <string name="app_name">OMG Shopping App</string>
    <string name="qty_short_text">Qty</string>
    <string name="update_order_button_text">Update Order</string>
    <string name="add_to_cart_button_text">Add to Cart</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="login_as_a_customer_label">Login as a Customer</string>
    <string name="login_as_a_clerk_label">Login as a Clerk</string>
    <string name="login_button_text">Login</string>
    <string name="create_account_text">Create Account</string>
    <string name="register_here_label">Sign Up</string>
    <string name="hello_user_sample_text">Hello User</string>
    <string name="product_image_sample_text">Product Image</string>
    <string name="product_name_sample_text">Product Name</string>
    <string name="category_sample_text">Category</string>
    <string name="price_sample_text">Price</string>
    <string name="available_sample_text">25</string>
    <string name="description_sample_text">description</string>
    <string name="order_nbr_sample_text">Order Nbr</string>
    <string name="number_sample_text">Number</string>
    <string name="date_sample_text">date</string>
    <string name="status_sample_text">Status</string>
    <string name="available_prefix">Available: </string>
    <string name="quantity_prefix">Qt: </string>
    <string name="logout_menu_item_text">Logout</string>
    <string name="orders_menu_item_text">Orders</string>
    <string name="products_menu_item_text">Categories</string>
    <string name="update_products_menu_item_text">Update Catalog</string>
    <string name="show_cart_menu_item_text">Show Cart</string>
    <string name="category_name_sample_text">Example Title</string>
    <string name="add_to_cart_button_description">Add to Cart Button</string>
    <string name="about_info_multiline">
                OMG Shopping App\n\n

                Course MAPD 711\n
                Android Development\n\n

                Professor\n
                Vinay Vaithilingam\n\n

                Developers\n
                Fatih Inan\n
                Irving Kaur\n
                Kamal Singh\n
                Robert Argume\n\n

                Digital Art by\n
                Analia Longhi\n\n

                Centennial College\n
                2018</string>
    <string name="about_menu_item_text">About</string>
    <string name="currency">$ </string>

    <string name="expirydate_text">Expiration Date</string>
    <string name="month_text">month</string>
    <string name="year_text">year</string>
    <string name="securitycode_text">SecurityCode</string>
    <string name="three_digitcode_text">3-digitCode</string>
    <string name="place_order_button_text">Place Order</string>
    <string name="cardtype_credit">Credit</string>
    <string name="cardtype_debit">Debit</string>
    <string name="ok_string">OK</string>

    <string name="card_required_digits">4</string>
    <string name="card_required_security_digits">3</string>

    <string name="error_message_address">Please enter an address</string>
    <string name="error_message_city">Please enter a city</string>
    <string name="error_message_postal_code">Please enter a postal code</string>
    <string name="error_message_payment_method">Please select a payment type</string>
    <string name="error_message_card_required">Please enter a card number</string>
    <string name="error_message_card_all_numbers">Card number can only contains digits</string>
    <string name="error_message_card_amount_digits">Card number should have 4 digits</string>

    <string name="error_message_expiration_month">Expiration Month is required!</string>
    <string name="error_message_expiration_year">Expiration Year is required!</string>
    <string name="spinner_month_default_text">Month</string>
    <string name="spinner_year_default_text">Year</string>
    <string name="error_message_nameOnCard_code">Please enter a card owner</string>
    <string name="error_message_security_code">Please enter a security code</string>
    <string name="error_message_security_code_all_numbers">Security code should be all numbers</string>
    <string name="error_message_security_code_amount_digits">Security code should contains 3 digits</string>
    <string name="checkout_button_text">Checkout</string>
    <string name="shipping_address_title_text">Shipping Address</string>
    <string name="shipping_address_hint">Shipping Address</string>
    <string name="shipping_city_title_text">Shipping City</string>
    <string name="shipping_city_title">Shipping city</string>
    <string name="postal_code_title">Postal Code</string>
    <string name="card_information_title">Card Information</string>
    <string name="card_number_title">Number</string>
    <string name="card_owner_title">Owner</string>
</resources>
