<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/shopping_cart_screen"
		android:icon="@mipmap/ic_shoppingcart"
		android:title="@string/show_cart_menu_item_text"
		app:showAsAction="always" />

    <item
		android:id="@+id/products_screen"
		android:title="@string/products_menu_item_text"
		android:orderInCategory="1"
		app:showAsAction="never"/>

	<item
		android:id="@+id/orders_screen"
		android:title="@string/orders_menu_item_text"
		android:orderInCategory="2"
		app:showAsAction="never"/>

	<item
		android:id="@+id/update_catalog"
		android:title="@string/update_products_menu_item_text"
		android:orderInCategory="3"
		app:showAsAction="never"/>

	<item
		android:id="@+id/login_screen"
		android:title="@string/logout_menu_item_text"
		android:orderInCategory="4"
		app:showAsAction="never"/>

</menu>
