<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5dp"
    android:orientation="vertical"
    tools:context="com.centennialcollege.omgshoppingapp.SingleProductActivity">

    <TextView
        android:id="@+id/greeting"
        style="@style/labelStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginRight="@dimen/large_text_margin"
        android:layout_marginEnd="@dimen/large_text_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:text="@string/hello_user_sample_text"
        android:textAlignment="viewEnd" />

    <ImageView
        android:id="@+id/single_product_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="3dp"
        android:background="#fff"
        android:padding="1dp"
        android:src="@mipmap/ball"
        android:contentDescription="@string/product_image_sample_text">
    </ImageView>


        <TextView
            android:id="@+id/single_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name_sample_text"
            android:textStyle="bold"
            android:textSize="36sp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp">
        </TextView>

    <TextView
        android:id="@+id/single_product_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_sample_text"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="2dp">
    </TextView>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginStart="0dp"
        android:orientation="horizontal"
        tools:context="com.centennialcollege.omgshoppingapp.ProductsActivity">

        <TextView
            android:id="@+id/single_product_price"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/price_sample_text"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:textColor="#E65100"
            android:textSize="30sp" >
        </TextView>


        <TextView
            android:id="@+id/product_availability_prefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/available_prefix"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        <TextView
            android:id="@+id/single_product_availability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/available_sample_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    </LinearLayout>


        <TextView
            android:id="@+id/single_product_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_sample_text"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:textSize="20sp" >
        </TextView>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        tools:context="com.centennialcollege.omgshoppingapp.ProductsActivity">


            <TextView
                android:id="@+id/single_product_quantity"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/qty_short_text"
                android:textColor="#000"
                android:textSize="25sp" >
            </TextView>

            <EditText
                android:id="@+id/qty"
                android:layout_width="80dp"
                android:layout_height="36dp"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="35dp"
                android:height="60dp"
                android:background="@drawable/rounded_border_edit_text"
                android:inputType="number" />

            <ImageButton
                android:id="@+id/btn_place_order"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="90dp"
                android:layout_marginStart="90dp"
                android:background="@drawable/rounded_border_button"
                android:enabled="true"
                android:onClick="onButtonClick"
                android:padding="0dp"
                android:text="@string/add_to_cart_button_text"
                android:scaleType="fitCenter"
                android:textColor="@color/white"
                android:textSize="0sp"
                app:srcCompat="@mipmap/ic_addtocart"
                android:contentDescription="@string/add_to_cart_button_description"/>


    </LinearLayout>




</LinearLayout>
